# Snagit_FOSS

./: .gitignore  CLAUDE.md  pyproject.toml
Example Snag Files/: TEST SNAG WRITE.smk
PRDs/: .~lock.SnapMock-General-UI-PRD.docx#  .~lock.SnapMock-Navigation-Raster-Operations-PRD.docx#  SnapMock-Basic-Shape-Annotation-Tools-PRD.docx  SnapMock-Blur-Highlighter-Eyedropper-Tools-PRD.docx  SnapMock-General-UI-PRD.docx  SnapMock-Library-PRD.docx  SnapMock-Navigation-Raster-Operations-PRD.docx  SnapMock-Numbered-Steps-Stamps-Emoji-PRD.docx  SnapMock-Technical-Architecture-PRD.docx  SnapMock-Text-Callout-Annotation-Tools-PRD.docx
PRDs/files/: SnapMock-Basic-Shape-Annotation-Tools-PRD.docx  SnapMock-Blur-Highlighter-Eyedropper-Tools-PRD.docx  SnapMock-General-UI-PRD.docx  (+3 more)
docs/: Navigation-Raster-Operations-Implementation.md  Snagit-SNAGX-File-Format-Support.md  prd-phase3-callout-frame-properties.md
snagit_foss/: __init__.py  __main__.py  app.py
snapmock/: __init__.py  __main__.py  app.py  main_window.py
tests/: conftest.py  test_app.py  test_arrange_commands.py  test_canvas_area.py  test_canvas_transform_commands.py  test_clipboard.py  test_clipboard_raster.py  test_command_stack.py  test_constants.py  test_context_menus.py  test_integration.py  test_inter_tool.py  test_item_properties_dialog.py  test_items.py  test_layer_manager.py  test_layer_properties_dialog.py  test_menus.py  test_preferences_dialog.py  test_property_panel.py  test_raster_commands.py  test_raster_operations.py  test_render_engine.py  test_rich_text.py  test_scene.py  test_transform_resize.py
(+99 files in other folders)
