[project]
name = "snapmock"
version = "0.1.0"
description = "Open-source multi-platform screenshot annotation & UI mockup tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyQt6",
    "Pillow",
    "numpy",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-qt",
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.ruff.lint.per-file-ignores]
"snapmock/**/*.py" = ["N802"]  # Qt method overrides use camelCase

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.12"
